react-transit: Fix Search example: z-index for search result...
...in order to show the search results on top of the example code

--- a/src/components/stops/Search/Search.scss
+++ b/src/components/stops/Search/Search.scss
@@ -28,6 +28,7 @@
       top: calc(100% - 1px);
       width: 100%;
       border: 1px solid #515151;
+      z-index: 1;
 
       .rt-search__suggestions-list {
         padding: 0;
